--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/react": "18.0.24",
+    "@types/node": "^18.11.7",
+    "@types/react-dom": "^18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
