--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && copyfiles prisma/schema.prisma .next/server/chunks/schema.prisma",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
@@ -21,6 +21,7 @@
     "@types/node": "^18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "^18.0.8",
+    "copyfiles": "^2.4.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
   }
