--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
-    "next": "^13.0.1-canary.1",
+    "next": "^13.0.0",
     "next-axiom": "^0.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
