--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && copyfiles prisma/schema.prisma .next/server/chunks/schema.prisma",
+    "build": "next build && copyfiles -f prisma/schema.prisma .next/server/chunks/",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
