--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@trpc/client": "^10.0.0-proxy-beta.26",
+    "@trpc/server": "^10.0.0-proxy-beta.26",
     "next": "^13.0.0",
     "next-axiom": "^0.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "^18.0.8",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "prettier": "^2.7.1"
   }
 }
