--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
-    "@trpc/client": "^10.0.0-proxy-beta.26",
-    "@trpc/server": "^10.0.0-proxy-beta.26",
-    "next": "^13.0.0",
+    "@trpc/client": "^10.0.0-rc.4",
+    "@trpc/server": "^10.0.0-rc.4",
+    "next": "^13.0.2",
     "next-axiom": "^0.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,11 +22,11 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.7",
-    "@types/react": "18.0.24",
+    "@types/node": "^18.11.9",
+    "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.8",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.2",
     "prettier": "^2.7.1"
   }
 }
