--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.4",
     "typescript": "^4.9.3",
     "zod": "^3.19.1"
   },
@@ -32,8 +33,11 @@
     "@types/node": "^18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4"
   }
 }
