--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "@radix-ui/react-popover": "^1.0.2",
     "@simplewebauthn/browser": "^6.2.2",
     "@simplewebauthn/server": "^6.2.2",
     "@trpc/client": "^10.0.0-rc.8",
     "@trpc/server": "^10.0.0-rc.8",
+    "classnames": "^2.3.2",
     "next": "^13.0.3",
     "next-axiom": "^0.15.1",
     "prisma": "^4.6.1",
