--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@next/font": "^13.0.4",
     "@prisma/client": "^4.6.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-popover": "^1.0.2",
