--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@next/font": "^13.0.4",
     "@prisma/client": "^4.6.1",
     "@radix-ui/react-label": "^2.0.0",
@@ -23,7 +24,7 @@
     "@trpc/client": "^10.0.0-rc.8",
     "@trpc/server": "^10.0.0-rc.8",
     "classnames": "^2.3.2",
-    "next": "^13.0.3",
+    "next": "^13.0.4",
     "next-axiom": "^0.15.1",
     "prisma": "^4.6.1",
     "react": "18.2.0",
@@ -34,12 +35,13 @@
   },
   "devDependencies": {
     "@simplewebauthn/typescript-types": "^6.3.0-alpha.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.4",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4"
