--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/client": "^10.0.0-rc.8",
     "@trpc/server": "^10.0.0-rc.8",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "next": "^13.0.4",
     "next-axiom": "^0.15.1",
     "prisma": "^4.6.1",
