--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-    "@next/font": "^13.0.4",
+    "@next/font": "^13.0.5",
     "@prisma/client": "^4.6.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-popover": "^1.0.2",
     "@simplewebauthn/browser": "^6.2.2",
     "@simplewebauthn/server": "^6.2.2",
-    "@trpc/client": "^10.0.0-rc.8",
-    "@trpc/server": "^10.0.0-rc.8",
+    "@trpc/client": "^10.2.0",
+    "@trpc/server": "^10.2.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "next": "^13.0.4",
+    "next": "^13.0.5",
     "next-axiom": "^0.15.1",
     "prisma": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.4",
+    "react-hook-form": "^7.39.5",
     "typescript": "^4.9.3",
     "zod": "^3.19.1"
   },
@@ -42,10 +42,10 @@
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
+    "eslint-config-next": "13.0.5",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.4"
   }
