--- a/package.json
+++ b/package.json
@@ -15,38 +15,38 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-    "@next/font": "^13.0.5",
-    "@prisma/client": "^4.6.1",
+    "@next/font": "^13.1.1",
+    "@prisma/client": "^4.8.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-popover": "^1.0.2",
-    "@simplewebauthn/browser": "^6.2.2",
-    "@simplewebauthn/server": "^6.2.2",
-    "@trpc/client": "^10.3.0",
-    "@trpc/server": "^10.3.0",
+    "@simplewebauthn/browser": "^7.0.0",
+    "@simplewebauthn/server": "^7.0.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "next": "^13.0.5",
-    "next-axiom": "^0.15.1",
-    "prisma": "^4.6.1",
+    "next": "^13.1.1",
+    "next-axiom": "^0.16.0",
+    "prisma": "^4.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.6",
-    "typescript": "^4.9.3",
-    "zod": "^3.19.1"
+    "react-hook-form": "^7.41.5",
+    "typescript": "^4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@simplewebauthn/typescript-types": "^6.3.0-alpha.1",
+    "@simplewebauthn/typescript-types": "^7.0.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "^18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/node": "^18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "^8.6.0",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4"
   }
 }
